finished tooltip, issue fixed wtih scrolling

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@
   color: #333;
   display: none;
   font-size: 12px;
-  position: absolute;
+  position: fixed;
   text-align: center;
   width: 50px;
   left: 0;
